--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,13 @@
 # JDBC properties
-# If we include then, each time it will create new tables for all the entities.
-
-enabledTLSProtocols=TLSv1.2
-spring.datasource.url=jdbc:mysql://localhost:3306/easycart?useSSL=false&serverTimezone=UTC&enabledTLSProtocols=TLSv1.2
-#spring.datasource.url=jdbc:mysql://localhost:3306/easycart?useSSL=false&serverTimezone=UTC
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:mysql://localhost:3306/easycart?useSSL=false&serverTimezone=UTC
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
 
 
 
