--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,10 @@
         <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
         <sonar.language>java</sonar.language>
         <sonar.sources>src/main/java</sonar.sources>
-        <sonar.exclusions>
+        <sonar.coverage.exclusions>
             **/com/zemoso/easycart/EasycartApplication**, **/com/zemoso/easycart/controller/HomeController** ,
             **/com/zemoso/easycart/config/SecurityConfig** , **/com/zemoso/easycart/entity, **/com/zemoso/easycart/dto
-        </sonar.exclusions>
+        </sonar.coverage.exclusions>
 
     </properties>
     <dependencies>
